# ScratchEverywhere

./: .clang-format  .clang-format-ignore  .clangd  .dockerignore  .gitignore  AresPackage.cmake  CMakeLists.txt  CONTRIBUTING.md  Makefile  Makefile_3ds  Makefile_pc  Makefile_switch  Makefile_wiiu  PORTING.md  README.md  devkitprothing.cpp  makefile  os.cpp  ppu.cmake  webos_manifest.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: port.md
.github/workflows/: deploy-wasm.yml  format-check.yml  nightly-3ds.yml  nightly-android.yml  nightly-gamecube.yml  nightly-libretro.yml  nightly-nds.yml  nightly-pc.yml  nightly-ps2.yml  nightly-ps4.yml  nightly-psp.yml  nightly-switch.yml  nightly-vita.yml  nightly-webos.yml  nightly-wii.yml  nightly-wiiu.yml
Building guide/: guide.md
android/: build.gradle
android/app/: build.gradle
cmake/: README.md  add_extension.cmake  clay.patch  xbox360-toolchain.cmake
cmake/audio/: headless.cmake  nds.cmake  sdl1.cmake  sdl2.cmake  sdl3.cmake
cmake/patches/: clay.patch  libcurl.patch
cmake/renderers/: citro2d.cmake  gl2d.cmake  headless.cmake  opengl.cmake  sdl1.cmake  sdl2.cmake  sdl3.cmake
cmake/toolchains/: ps4.cmake
cmake/windowing/: 3ds.cmake  glfw.cmake  headless.cmake  libretro.cmake  nds.cmake  sdl1.cmake  sdl2.cmake  sdl3.cmake
docker/: Dockerfile.3ds  Dockerfile.android  Dockerfile.gamecube  Dockerfile.gba  Dockerfile.libretro  Dockerfile.linux  Dockerfile.linux-arch  Dockerfile.macos  Dockerfile.nds  Dockerfile.ps2  Dockerfile.ps4  Dockerfile.psp  Dockerfile.switch  Dockerfile.vita  Dockerfile.wasm  Dockerfile.webos  Dockerfile.wii  Dockerfile.wiiu  Dockerfile.windows  Dockerfile.xbox360
gfx/: AppInfo  certs.pem  makerom.rsf  template.rsf
gfx/3ds/: banner.cgfx  makerom.rsf.in
gfx/ingame/: scratch.sf2
gfx/linux/: scratch-everywhere.desktop
gfx/macOS/: Icon.icns  Info.plist
gfx/menu/: splashText.txt
gfx/ps3/: makepkg.sh  sfo.xml
gfx/templates/: background.xcf  generate.sh
gfx/translations/: de_de.json  en_gb.json  en_gb.splashes.txt  en_us.json  en_us.splashes.txt  es_419.json  es_419.splashes.txt  es_es.json  es_es.splashes.txt  fr_fr.json  fr_fr.splashes.txt  ja_jp.json  ja_jp.splashes.txt  ko_kr.json  ko_kr.splashes.txt  languages.json  pl_pl.json  pl_pl.splashes.txt  pt_br.json  pt_br.splashes.txt  pt_pt.json  pt_pt.splashes.txt  ro_ro.json  ro_ro.splashes.txt  ru_ru.json  ru_ru.splashes.txt
gfx/wasm/: shell.html
gfx/webos/: appinfo.json
gfx/wii/: meta.xml.in
gfx/wiiu/: meta.xml.in
gfx/windows/: resource.rc
guide/: guide.md
include/: clay.h  clay3ds.h  clay_renderer_SDL2.c
include/sol/: config.hpp  forward.hpp  sol.hpp
make/: Makefile_3ds  Makefile_GBA  Makefile_ds  Makefile_gamecube  Makefile_nds  Makefile_pc  Makefile_ps4  Makefile_psp  Makefile_switch  Makefile_vita  Makefile_wasm  Makefile_wii  Makefile_wiiu  Makefile_xbox  Makefile_xbox360
native-extension/: CMakeLists.txt  main.cpp
romfs/: file.txt
source/: audio.hpp  audio_old.hpp  audiostack.cpp  audiostack.hpp  clayBuilder.c  downloader.cpp  downloader.hpp  filesystem.cpp  filesystem.hpp  image.cpp  image.hpp  input.cpp  input.hpp  input_strings.hpp  inspector.cpp  keyboard.hpp  libretro.cpp  log.cpp  log.hpp  main.cpp  migrate.cpp  migrate.hpp  os.cpp  os.hpp  ps3_stdcxx_fix.c  receiver.cpp  receiver.hpp  render.cpp  render.hpp  settings.cpp  settings.hpp  speech_manager.cpp  speech_manager.hpp  text.cpp  text.hpp  translation.cpp  translation.hpp  window.hpp
source/3ds/: downloadManager.cpp  image.cpp  image.hpp  input.cpp  mic.cpp  render.cpp  speech_manager_3ds.cpp  speech_manager_3ds.hpp  speech_text_3ds.cpp  speech_text_3ds.hpp  text.cpp  text_3ds.cpp  text_3ds.hpp  unzip.cpp
source/headless/: audio.cpp  image.cpp  input.cpp  render.cpp
source/menus/: components.cpp  components.hpp  confirmationMenu.cpp  confirmationMenu.hpp  controlsMenu.cpp  controlsMenu.hpp  languageMenu.cpp  languageMenu.hpp  loading.cpp  loading.hpp  mainMenu.cpp  mainMenu.hpp  menu.cpp  menu.hpp  menuManager.cpp  menuManager.hpp  menuObjects.cpp  menuObjects.hpp  pauseMenu.cpp  pauseMenu.hpp  popupMenu.cpp  popupMenu.hpp  projectMenu.cpp  projectMenu.hpp  projectSettings.cpp  projectSettings.hpp  projectSettingsMenu.cpp  projectSettingsMenu.hpp  projectsMenu.cpp  projectsMenu.hpp  receiveMenu.cpp  receiveMenu.hpp  settingsMenu.cpp  settingsMenu.hpp  unpackMenu.cpp  unpackMenu.hpp
source/nds/: audio.cpp  audio.hpp  image.cpp  image.hpp  input.cpp  render.cpp  speech_manager_nds.cpp  speech_manager_nds.hpp  speech_text_nds.cpp  speech_text_nds.hpp  swzl.hpp  text_nds.cpp  text_nds.hpp
source/runtime/: OLDblockExecutor.cpp  OLDblockExecutor.hpp  OLDinterpret.cpp  OLDinterpret.hpp  blockExecutor.cpp  blockExecutor.hpp  collision.cpp  collision.hpp  color.hpp  devkitprothing.cpp  interpret.cpp  interpret.hpp  math.cpp  math.hpp  parser.cpp  parser.hpp  runtime.cpp  runtime.hpp  sprite.hpp  time.cpp  time.hpp  unzip.cpp  unzip.hpp  value.cpp  value.hpp
source/scratch/: audio.hpp  blockExecutor.cpp  blockExecutor.hpp  color.hpp  downloader.cpp  downloader.hpp  extension.hpp  image.hpp  input.cpp  input.hpp  interpret.cpp  interpret.hpp  linker.cpp  linker.hpp  math.cpp  math.hpp  mic.cpp  mic.hpp  os.cpp  os.hpp  random.cpp  random.hpp  render.hpp  speech_manager.cpp  speech_manager.hpp  speech_text.cpp  speech_text.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  time.cpp  unzip.cpp  unzip.hpp  value.cpp  value.hpp
source/sdl/: assets.h  downloadManager.cpp  image.cpp  image.hpp  input.cpp  keyboard.cpp  mic.cpp  render.cpp  render.hpp  speech_manager.cpp  speech_manager.hpp  speech_manager_sdl.cpp  speech_manager_sdl.hpp  speech_text.cpp  speech_text.hpp  speech_text_sdl.cpp  speech_text_sdl.hpp  text_sdl.cpp  text_sdl.hpp  unzip.cpp
source/sdl1/: image.cpp  image.hpp  input.cpp  keyboard.cpp  render.cpp  render.hpp  speech_manager_sdl.cpp  speech_manager_sdl.hpp  speech_text_sdl.cpp  text_sdl.cpp  text_sdl.hpp
source/sdl2/: image.cpp  image.hpp  input.cpp  (+5 more)
(+337 files in other folders)
